# sm-2-cli

./: .gitignore  README.md  main.py  pyproject.toml
src/dsaprep/: __init__.py  cli.py  database.py  srs.py  ux.py
src/dsaprep/data/: blind75.json
tests/: test_srs.py
